--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script> -->
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +40,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div class="audios">
+      <div>
+          <audio id="localAudio" autoplay  controls muted></audio>
+      </div>
+  </div>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/webrtc.js"></script>
+  <script type="text/javascript">
+      pageReady();
+  </script>
   </body>
 </html>
