--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,10 @@
     -->
     <div class="audios">
       <div>
-          <audio id="localAudio" autoplay  controls muted></audio>
+          <audio id="localAudio" autoplay controls muted></audio>
       </div>
   </div>
+  <!-- <script src = "/src/Views/global.js"></script> -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="/webrtc.js"></script>
   <script type="text/javascript">
